# rlm-local

./: .gitignore  ABOUT.md  README.md  TROUBLESHOOTING_FIXES.md  pyproject.toml  requirements.txt  test_basic.py
docs/: HOW_TO_RUN.md  UV_QUICK_REFERENCE.md  qwen2.5_coder_14b_local_setup.md  usage_guide.md
examples/: code_refactoring.py  complex_analysis.py  simple_query.py
goals/: rlm_architecture.md
src/: __init__.py
src/rlm/: __init__.py  client.py  config.py  controller.py  state.py
src/rlm/prompts/: __init__.py  critic_prompts.py  planner_prompts.py  reasoner_prompts.py
src/rlm/stages/: __init__.py  base.py  critic.py  planner.py  reasoner.py  retriever.py
src/utils/: logging.py
tests/: __init__.py
tests/test_stages/: __init__.py
